fix scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -963,10 +963,10 @@
       }
     }
   }
-  .hover\:text-\[\#9c420\] {
+  .hover\:text-\[\#9c4270\] {
     &:hover {
       @media (hover: hover) {
-        color: #9c420;
+        color: #9c4270;
       }
     }
   }
@@ -1576,4 +1576,23 @@
       --tw-translate-z: 0;
     }
   }
+}
+
+.custom-scroll::-webkit-scrollbar{
+  width: 6px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb{
+  background-color: #b4b4b4;
+  border-radius: 4px;
+}
+
+.custom-scroll::-webkit-scrollbar-track{
+  background-color: #f1f1f1;
+  
+}
+
+.custom-scroll{
+  scrollbar-width: thin;
+  scrollbar-color: #b4b4b4 #f1f1f1;
 }
